manifests/base/deployment.yaml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: sampleapp1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sampleapp1
  template:
    metadata:
      labels:
        app: sampleapp1
    spec:
      containers:
        - name: sampleapp1
          image: cepgstapacr.azurecr.io/sampleapp1
          ports:
          - containerPort: 8080
