manifests/base/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: sampleapp1
spec:
    ports:
    - port: 8081
    selector:
        app: sampleapp1
