manifests/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sampleapp1-ingress
spec:
  ingressClassName: ingress-internal
  rules:
  - host: sampleapp1-82023143.cepg-aa.kubepia.net
    http:
      paths:
      - path: /
        backend:
          service:
            name: sampleapp1
            port:
              number: 8080
        pathType: Prefix
